[package]
name = "umbrella"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcprotocol = { git = "https://github.com/MCEntropy/MCProtocol.rs", branch = "rewrite" }
drax = { git = "https://github.com/MCEntropy/Drax", branch = "develop", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.65"
chrono = "0.4.22"
fern = "0.6.1"
image-base64 = "0.1.0"
log = { version = "0.4.17", features = ["serde"] }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.86"
hmac = "0.12.1"
sha2 = "0.10.6"
uuid = "1.2.1"
pin-project-lite = "0.2.9"
